# My-Cpp-Codebook

./: CMakeLists.txt  README.md  main.cpp
lib/math/: operations.cpp  operations.hpp
